[android] More robust and simplified Logger logic.
Signed-off-by: Viktor Govako <viktor.govako@gmail.com>